--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>My First Project</title>
+
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-            <li><a href="recipes/italian_chicken.html">Italian Chicken Marinade Recipe</a></li>
-            <li><a href="recipes/asparagus.html">Grilled Asparagus Recipe</a></li>
-        </ul>
-
+        <h1 class="heading">Odin Recipes</h1>
+        <div class="list">
+            <ul>
+                <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+                <li><a href="recipes/italian_chicken.html">Italian Chicken Marinade Recipe</a></li>
+                <li><a href="recipes/asparagus.html">Grilled Asparagus Recipe</a></li>
+            </ul>
+        </div>
         
     </body>
 </html>
