--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 
     <body>
         <h1 class="heading">Odin Recipes</h1>
+        <p1> Below are some well-known recipes that you should try yourself at home!</p1>
         <div class="list">
             <ul>
-                <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-                <li><a href="recipes/italian_chicken.html">Italian Chicken Marinade Recipe</a></li>
-                <li><a href="recipes/asparagus.html">Grilled Asparagus Recipe</a></li>
+                <li>
+                    <img src="images/asparagus.jpeg" alt="Grilled Asparagus" class="pisah">
+                    <a href="recipes/lasagna.html"><button class="pisah">Lasagna Recipe</button></a>
+                </li>
+                <li>
+                    <img src="images/chicken.jpeg" alt="chicken" class ="pisah ayam">
+                    <a href="recipes/italian_chicken.html"><button class="pisah">Italian Chicken Marinade Recipe</button></a>
+                </li>
+                <li>
+                    <img src="images/lasagna.jpg" alt="lasagna" class="pisah">
+                    <a href="recipes/asparagus.html"><button class="pisah">Grilled Asparagus Recipe</button></a>
+                </li>
             </ul>
         </div>
         
